load("@npm//less:index.bzl", "lessc")
load("@npm//stylus:index.bzl", "stylus")
load("@build_bazel_rules_postcss//:index.bzl", "autoprefixer")

package(default_visibility = ["//:__pkg__"])

lessc(
    name = "base",
    outs = [
        "base.css",
        "base.css.map",
    ],
    args = [
        "$(execpath base.less)",
        # Output paths must use $(execpath) since Bazel puts them in a platform-dependent output directory
        "$(execpath base.css)",
        "--silent",
        "--source-map",
    ],
    data = [
        "base.less",
        "variables.less",
    ],
)

stylus(
    name = "styles",
    outs = [
        "test.css",
        "test.css.map",
    ],
    args = [
        "$(execpath test.styl)",
        "--out",
        # Output paths must use $(execpath) since Bazel puts them in a platform-dependent output directory
        "$(execpath test.css)",
        "--compress",
        "--sourcemap",
    ],
    data = ["test.styl"],
)

AUTO_PREFIXER_BROWSERS = "ie >= 9, edge >= 12, firefox >= 42, chrome >= 32, safari >= 8, opera >= 38, ios_saf >= 9.2, android >= 4.3, and_uc >= 9.9"

autoprefixer(
    name = "autoprefixer",
    src = "//styles:base.css",
    out = "base_prefixed.css",
    browsers = AUTO_PREFIXER_BROWSERS,
)
